--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ APP_SETTINGS=config.DevelopmentConfig
 DATABASE_URL=sqlite:///db.sqlite
 FLASK_APP=src
 FLASK_DEBUG=1
+EMAIL_USER=pasoksystem@gmail.com
+EMAIL_PASSWORD=2Rh5YWc8Ywr4wtg
