--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-email-validator
-Flask
-Flask-Login
-Flask-Bcrypt
-Flask-WTF
-Flask-Mail
-Flask-Migrate
-Flask-SQLAlchemy
-Flask-Testing
-python-decouple
-python-dotenv
+email-validator==2.0.0.post2
+Flask==2.3.3
+Flask-Login==0.6.2
+Flask-Bcrypt==1.0.1
+Flask-WTF==1.1.1
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
+python-decouple==3.8
+python-dotenv==1.0.0
