--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,42 @@
+alembic==1.12.0
+bcrypt==4.0.1
+blinker==1.6.2
+click==8.1.7
+colorama==0.4.6
+dnspython==2.4.2
+dominate==2.8.0
 email-validator==2.0.0.post2
 Flask==2.3.3
-Flask-Login==0.6.2
 Flask-Bcrypt==1.0.1
-Flask-WTF==1.1.1
+Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
+flask-nav==0.6
+Flask-Principal==0.4.0
+Flask-Security-Too==5.3.0
+Flask-SQLAlchemy==3.0.5
 Flask-Testing==0.8.1
+Flask-WTF==1.1.1
+greenlet==2.0.2
+gunicorn==21.2.0
+idna==3.4
+importlib-resources==6.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
+numpy==1.26.1
+opencv-python==4.8.1.78
+packaging==23.1
+passlib==1.7.4
+Pillow==10.0.1
+pypng==0.20220715.0
 python-decouple==3.8
 python-dotenv==1.0.0
+pyzbar==0.1.9
+qrcode==7.4.2
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
+visitor==0.1.3
 Werkzeug==2.3.7
+WTForms==3.0.1
