--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.12.0
+asn1crypto==1.5.1
 bcrypt==4.0.1
 blinker==1.6.2
 click==8.1.7
@@ -8,7 +9,7 @@ dominate==2.8.0
 email-validator==2.0.0.post2
 Flask==2.3.3
 Flask-Bcrypt==1.0.1
-Flask-Login==0.6.2
+Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 flask-nav==0.6
@@ -28,15 +29,22 @@ MarkupSafe==2.1.3
 numpy==1.26.1
 opencv-python==4.8.1.78
 packaging==23.1
+pandas==2.1.3
 passlib==1.7.4
+pg8000==1.30.3
 Pillow==10.0.1
 pypng==0.20220715.0
+python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
+pytz==2023.3.post1
 pyzbar==0.1.9
 qrcode==7.4.2
+scramp==1.4.4
+six==1.16.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
+tzdata==2023.3
 visitor==0.1.3
-Werkzeug==2.3.7
+Werkzeug==2.3.8
 WTForms==3.0.1
