--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+aiohttp==3.9.0
+aiosignal==1.3.1
 alembic==1.12.0
 asn1crypto==1.5.1
+attrs==23.1.0
 bcrypt==4.0.1
 blinker==1.6.2
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+cloud-sql-python-connector==1.4.3
 colorama==0.4.6
+cryptography==41.0.5
 dnspython==2.4.2
 dominate==2.8.0
 email-validator==2.0.0.post2
@@ -18,6 +27,8 @@ Flask-Security-Too==5.3.0
 Flask-SQLAlchemy==3.0.5
 Flask-Testing==0.8.1
 Flask-WTF==1.1.1
+frozenlist==1.4.0
+google-auth==2.23.4
 greenlet==2.0.2
 gunicorn==21.2.0
 idna==3.4
@@ -26,6 +37,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
+multidict==6.0.4
 numpy==1.26.1
 opencv-python==4.8.1.78
 packaging==23.1
@@ -33,6 +45,9 @@ pandas==2.1.3
 passlib==1.7.4
 pg8000==1.30.3
 Pillow==10.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 pypng==0.20220715.0
 python-dateutil==2.8.2
 python-decouple==3.8
@@ -40,11 +55,15 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 pyzbar==0.1.9
 qrcode==7.4.2
+requests==2.31.0
+rsa==4.9
 scramp==1.4.4
 six==1.16.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 tzdata==2023.3
+urllib3==2.1.0
 visitor==0.1.3
 Werkzeug==2.3.8
 WTForms==3.0.1
+yarl==1.9.2
