--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 flask-nav==0.6
 Flask-Principal==0.4.0
-Flask-Security-Too==5.3.0
+Flask-Security-Too>=5.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-Testing==0.8.1
 Flask-WTF==1.1.1
